# gle

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENCE  README.md
cmake/: globals.cmake
examples/: CMakeLists.txt  basic.cpp  camera.hpp  toml_scene.cpp  toml_scene.toml
gle/: camera.hpp  camera.inl  common.hpp  fwd.hpp  gl.hpp  gle.hpp  light.hpp  light.inl  logging.hpp  mesh.hpp  mesh.inl  object.hpp  object.inl  render_pass.hpp  render_pass.inl  scene.hpp  scene.inl  shader.hpp  shader.inl  texture.hpp  texture.inl  vao.hpp  vao.inl  vbo.hpp  vbo.inl  window.hpp  window.inl
gle/meshs/: obj.hpp  obj.inl  primitives.hpp  primitives.inl
gle/passes/: object_render_pass.hpp  object_render_pass.inl  shadow_render_pass.hpp  shadow_render_pass.inl
gle/shaders/: debug_shader.hpp  debug_shader.inl  solid_color_shader.hpp  solid_color_shader.inl  standard_shader.hpp  standard_shader.inl
scene/: CMakeLists.txt  scene_compiler.cpp  test.cpp
tests/: main.cpp
